# bob_llm-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: ros_ci.yml
bob_llm/: __init__.py  backend_clients.py  llm_node.py  setup.cfg  tool_utils.py
config/: example_interface.py  node_params.yaml  qdrant_tools.py  ros_cli_tools.py
debian/: changelog  control  copyright  gbp.conf  rules
rpm/: ros-humble-bob-llm.spec  ros-rolling-bob-llm.spec  template.spec
scripts/: query.sh
